Add some changes

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
           version: ${{steps.previous-tag.outputs.tag}}
 
       - name: Get color
-        run: echo 'The selected color is' ${{github.event.pull_request.head.ref}}
+        run: echo 'The PR is' ${{github.event.push.head.ref}}
       
       - name: Create tag for patch version (hotfix)
         if: contains(github.event.pull_request.head.ref, 'hotfix/')
