--- a/.github/workflows/create-release-branch.yml
+++ b/.github/workflows/create-release-branch.yml
@@ -1,37 +1,58 @@
 name: Create Release Branch
 on:
   workflow_dispatch:
-    inputs:
-      versionName:
-        description: 'Version name (i.e. v2.5.0)'
-        required: true
+      
 jobs:
   createrelease:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout master
+      uses: actions/checkout@v2
+      with:
+        ref: 'master'
+
+    - name: Find previous tag
+      id: previous-tag
+      uses: jimschubert/query-tag-action@v1
+      with:
+        include: 'v*'
+
+    - name: Get next semver
+      id: next-tag
+      uses: 'WyriHaximus/github-action-next-semvers@v1'
+      with:
+        version: ${{steps.previous-tag.outputs.tag}}
+
     - name: Check out code
       uses: actions/checkout@v2
+      with:
+        ref: 'develop'
+
     - name: Create release branch
-      run: git checkout -b release/${{ github.event.inputs.versionName }}
+      run: git checkout -b release/v${{ steps.next-tag.outputs.v_minor }}
+
     - name: Initialize mandatory git config
       run: |
        git config user.name "GitHub Actions"
        git config user.email noreply@github.com
+
     - name: Push new branch
-      run: git push origin release/${{ github.event.inputs.versionName }}
+      run: git push origin release/v${{ github.event.inputs.versionName }}
+
     - name: Create pull request into master
       uses: thomaseizinger/create-pull-request@1.0.0
       with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        head: release/${{ github.event.inputs.versionName }}
+        GITHUB_TOKEN: ${{github.token}}
+        head: release/v${{ github.event.inputs.versionName }}
         base: master
-        title: Release ${{ github.event.inputs.versionName }} into master
+        title: Release v${{ github.event.inputs.versionName }} into master
         #  body: Hello
+
     - name: Create pull request to develop
       uses: thomaseizinger/create-pull-request@1.0.0
       with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        head: release/${{ github.event.inputs.versionName }}
+        GITHUB_TOKEN: ${{github.token}}
+        head: release/v${{ github.event.inputs.versionName }}
         base: develop
-        title: Release ${{ github.event.inputs.versionName }} into develop
+        title: Release v${{ github.event.inputs.versionName }} into develop
         # body: Hello
