--- a/.github/workflows/create-release-branch.yml
+++ b/.github/workflows/create-release-branch.yml
@@ -29,7 +29,7 @@ jobs:
         ref: 'develop'
 
     - name: Create release branch
-      run: git checkout -b release/v${{ steps.next-tag.outputs.v_minor }}
+      run: git checkout -b release/${{ steps.next-tag.outputs.v_minor }}
 
     - name: Initialize mandatory git config
       run: |
@@ -37,22 +37,22 @@ jobs:
        git config user.email noreply@github.com
 
     - name: Push new branch
-      run: git push origin release/v${{ github.event.inputs.versionName }}
+      run: git push origin release/${{ steps.next-tag.outputs.v_minor }}
 
     - name: Create pull request into master
       uses: thomaseizinger/create-pull-request@1.0.0
       with:
         GITHUB_TOKEN: ${{github.token}}
-        head: release/v${{ github.event.inputs.versionName }}
+        head: release/${{ steps.next-tag.outputs.v_minor }}
         base: master
-        title: Release v${{ github.event.inputs.versionName }} into master
+        title: Release ${{ steps.next-tag.outputs.v_minor }} into master
         #  body: Hello
 
     - name: Create pull request to develop
       uses: thomaseizinger/create-pull-request@1.0.0
       with:
         GITHUB_TOKEN: ${{github.token}}
-        head: release/v${{ github.event.inputs.versionName }}
+        head: release/${{ steps.next-tag.outputs.v_minor }}
         base: develop
-        title: Release v${{ github.event.inputs.versionName }} into develop
+        title: Release ${{ steps.next-tag.outputs.v_minor }} into develop
         # body: Hello
