--- a/.github/workflows/create-release-branch.yml
+++ b/.github/workflows/create-release-branch.yml
@@ -40,18 +40,18 @@ jobs:
       run: git push origin release/${{ steps.next-tag.outputs.v_minor }}
 
     - name: Create pull request into master
-      uses: thomaseizinger/create-pull-request@1.0.0
+      uses: thomaseizinger/create-pull-request@1.2.1
       with:
-        GITHUB_TOKEN: ${{github.token}}
+        github-token: ${{github.token}}
         head: release/${{ steps.next-tag.outputs.v_minor }}
         base: master
         title: Release ${{ steps.next-tag.outputs.v_minor }} into master
         #  body: Hello
 
     - name: Create pull request to develop
-      uses: thomaseizinger/create-pull-request@1.0.0
+      uses: thomaseizinger/create-pull-request@1.2.1
       with:
-        GITHUB_TOKEN: ${{github.token}}
+        github-token: ${{github.token}}
         head: release/${{ steps.next-tag.outputs.v_minor }}
         base: develop
         title: Release ${{ steps.next-tag.outputs.v_minor }} into develop
