--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
         if: contains(github.event.pull_request.head.ref, 'hotfix/')
         uses: actions/github-script@v3
         with:
-          github-token: ${{github.token}}
+          github_token: ${{github.token}}
           script: |
             github.git.createRef({
               owner: context.repo.owner,
@@ -41,7 +41,7 @@ jobs:
         if: contains(github.event.pull_request.head.ref, 'release/')
         uses: actions/github-script@v3
         with:
-          github-token: ${{github.token}}
+          github_token: ${{github.token}}
           script: |
             github.git.createRef({
               owner: context.repo.owner,
