--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
     types: [closed]
 jobs:
   build-and-deploy:
-    if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true && (contains(github.event.pull_request.head.ref, 'hotfix/') || contains(github.event.pull_request.head.ref, 'release/'))
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
