--- a/.github/workflows/create-release-branch.yml
+++ b/.github/workflows/create-release-branch.yml
@@ -9,17 +9,17 @@ jobs:
     - name: Checkout master
       uses: actions/checkout@v2
       with:
-        ref: 'master'
+        ref: master
 
     - name: Find previous tag
       id: previous-tag
       uses: jimschubert/query-tag-action@v1
       with:
-        include: 'v*'
+        include: v*
 
     - name: Get next semver
       id: next-tag
-      uses: 'WyriHaximus/github-action-next-semvers@v1'
+      uses: WyriHaximus/github-action-next-semvers@v1
       with:
         version: ${{steps.previous-tag.outputs.tag}}
 
@@ -42,17 +42,8 @@ jobs:
     - name: Create pull request into master
       uses: thomaseizinger/create-pull-request@1.2.1
       with:
-        github_token: ${{github.token}}
+        # github_token: ${{github.token}}
         head: release/${{ steps.next-tag.outputs.v_minor }}
         base: master
         title: Release ${{ steps.next-tag.outputs.v_minor }} into master
-        #  body: Hello
-
-    - name: Create pull request to develop
-      uses: thomaseizinger/create-pull-request@1.2.1
-      with:
-        github_token: ${{github.token}}
-        head: release/${{ steps.next-tag.outputs.v_minor }}
-        base: develop
-        title: Release ${{ steps.next-tag.outputs.v_minor }} into develop
-        # body: Hello
+        # draft: true
