--- a/.github/workflows/create-release-branch.yml
+++ b/.github/workflows/create-release-branch.yml
@@ -3,7 +3,8 @@ on:
   workflow_dispatch:
       
 jobs:
-  createrelease:
+  create-release-bracn:
+    name: Create release branch
     runs-on: ubuntu-latest
     steps:
     - name: Checkout master
