--- a/.github/workflows/push-to-release.yml
+++ b/.github/workflows/push-to-release.yml
@@ -4,14 +4,17 @@ on:
     branches:
       - release/*
 
-jobs:
+jobs:   
   create-dev-pr:
     name: Create PR for release into develop 
     runs-on: ubuntu-latest
     steps:
       - name: Generate PR title
         id: pr-title
-        run: echo "::set-output name=value::$GITHUB_REF##*/"
+        run: |
+          replaceMatch="refs/heads/release/"
+          replaceValue="Release "
+          echo "::set-output name=dir::${GITHUB_REF/$replaceMatch/$replaceValue}""
 
       - name: Create pull request into develop
         uses: thomaseizinger/create-pull-request@1.2.1
@@ -19,4 +22,4 @@ jobs:
           github_token: ${{github.token}}
           head: ${{github.ref}}
           base: develop
-          title: ${{steps.pr-title.outputs.value}}
+          title: ${{github.ref}} into develop
