--- a/.github/workflows/push-to-release.yml
+++ b/.github/workflows/push-to-release.yml
@@ -12,9 +12,10 @@ jobs:
       - name: Generate PR title
         id: pr-title
         run: |
+          param=$GITHUB_REF
           replaceMatch="refs/heads/release/"
           replaceValue="Release "
-          echo "::set-output name=dir::${$GITHUB_REF/$replaceMatch/$replaceValue} into develop"
+          echo "::set-output name=dir::${param/$replaceMatch/$replaceValue} into develop"
 
       - name: Create pull request into develop
         uses: thomaseizinger/create-pull-request@1.2.1
