--- a/.github/workflows/push-to-release.yml
+++ b/.github/workflows/push-to-release.yml
@@ -16,7 +16,7 @@ jobs:
           replaceMatch="refs/heads/release/"
           replaceValue="Release "
           result=${param/$replaceMatch/$replaceValue}
-          echo "::set-output name=dir::$result"
+          echo "::set-output name=value::$result"
 
       - name: Create pull request into develop
         uses: thomaseizinger/create-pull-request@1.2.1
@@ -24,4 +24,4 @@ jobs:
           github_token: ${{github.token}}
           head: ${{github.ref}}
           base: develop
-          title: ${{github.ref}} into develop
+          title: ${{steps.pr-title.outputs.value}} into develop
