--- a/.github/workflows/cut-release.yml
+++ b/.github/workflows/cut-release.yml
@@ -39,7 +39,7 @@ jobs:
         ref: 'develop'
 
     - name: Create release branch
-      run: git checkout -b release/${{ steps.next-tag.outputs.v_minor }}
+      run: git checkout -b release/${{steps.next-tag.outputs.v_minor}}
 
     - name: Initialize mandatory git config
       run: |
@@ -47,7 +47,7 @@ jobs:
        git config user.email noreply@github.com
 
     - name: Push new branch
-      run: git push origin release/${{ steps.next-tag.outputs.v_minor }}
+      run: git push origin release/${{steps.next-tag.outputs.v_minor}}
 
     # TODO: Create PR on push to release/*
     # - name: Create pull request into develop
@@ -63,8 +63,8 @@ jobs:
       uses: thomaseizinger/create-pull-request@1.2.1
       with:
         github_token: ${{github.token}}
-        head: release/${{ steps.next-tag.outputs.v_minor }}
+        head: release/${{steps.next-tag.outputs.v_minor}}
         base: master
-        title: Release ${{ steps.next-tag.outputs.v_minor }} into master
+        title: Release/${{steps.next-tag.outputs.v_minor}} into master
         # draft: true
 
