--- a/.github/workflows/cut-release.yml
+++ b/.github/workflows/cut-release.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v2
       with:
-        ref: 'develop'
+        ref: develop
 
     - name: Create release branch
       run: git checkout -b release/${{steps.next-tag.outputs.v_minor}}
@@ -39,4 +39,10 @@ jobs:
     - name: Push new branch
       run: git push origin release/${{steps.next-tag.outputs.v_minor}}
 
-
+    - name: Create pull request into master
+      uses: thomaseizinger/create-pull-request@1.2.1
+      with:
+        github_token: ${{github.token}}
+        head: release/${{steps.next-tag.outputs.v_minor}}
+        base: master
+        title: Release/${{steps.next-tag.outputs.v_minor}} into master
