--- a/.github/workflows/push-to-release.yml
+++ b/.github/workflows/push-to-release.yml
@@ -14,6 +14,12 @@ jobs:
     name: Create PR
     runs-on: ubuntu-latest
     steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+        with:
+          ref: master
+          fetch_depth: 0
+
       - name: Find previous tag
         id: previous-tag
         uses: WyriHaximus/github-action-get-previous-tag@v1
