--- a/.github/workflows/cut-release.yml
+++ b/.github/workflows/cut-release.yml
@@ -39,10 +39,10 @@ jobs:
     - name: Push new branch
       run: git push origin release/${{steps.next-tag.outputs.v_minor}}
 
-    - name: Check out release branch
-      uses: actions/checkout@v2
-      with:
-        ref: release/${{steps.next-tag.outputs.v_minor}}
+    # - name: Check out release branch
+    #   uses: actions/checkout@v2
+    #   with:
+    #     ref: release/${{steps.next-tag.outputs.v_minor}}
 
     # - name: Create pull request into master
     #   uses: thomaseizinger/create-pull-request@1.2.1
