--- a/.github/workflows/cut-release.yml
+++ b/.github/workflows/cut-release.yml
@@ -3,48 +3,41 @@ on:
   workflow_dispatch:
       
 jobs:
-  create-release-branch:
-    name: Create release branch
+  cut-release:
+    name: Cut release
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code
-        uses: actions/checkout@v2
+    - name: Checkout master
+      uses: actions/checkout@v2
+      with:
+        ref: master
+        fetch-depth: 0
 
-      - name: Find previous tag
-        id: previous-tag
-        uses: WyriHaximus/github-action-get-previous-tag@v1
+    - name: Find previous tag
+      id: previous-tag
+      uses: WyriHaximus/github-action-get-previous-tag@v1
 
-      - name: Get next semver
-        id: next-tag
-        uses: WyriHaximus/github-action-next-semvers@v1
-        with:
-          version: ${{steps.previous-tag.outputs.tag}}
+    - name: Get next semver
+      id: next-tag
+      uses: WyriHaximus/github-action-next-semvers@v1
+      with:
+        version: ${{steps.previous-tag.outputs.tag}}
 
-      - name: Check out code
-        uses: actions/checkout@v2
-        with:
-          ref: develop
+    - name: Check out code
+      uses: actions/checkout@v2
+      with:
+        ref: develop
 
-      - name: Create release branch
-        run: git checkout -b release/${{steps.next-tag.outputs.v_minor}}
+    - name: Create release branch
+      run: git checkout -b release/${{steps.next-tag.outputs.v_minor}}
 
-      - name: Initialize mandatory git config
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email noreply@github.com
+    - name: Push new branch
+      run: git push origin release/${{steps.next-tag.outputs.v_minor}}
 
-      - name: Push new branch
-        run: git push origin release/${{steps.next-tag.outputs.v_minor}}
-
-    # - name: Check out release branch
-    #   uses: actions/checkout@v2
-    #   with:
-    #     ref: release/${{steps.next-tag.outputs.v_minor}}
-
-    # - name: Create pull request into master
-    #   uses: thomaseizinger/create-pull-request@1.2.1
-    #   with:
-    #     github_token: ${{github.token}}
-    #     head: release/${{steps.next-tag.outputs.v_minor}}
-    #     base: master
-    #     title: Release/${{steps.next-tag.outputs.v_minor}} into master
+    - name: Create pull request into master
+      uses: thomaseizinger/create-pull-request@1.2.1
+      with:
+        github_token: ${{github.token}}
+        head: release/${{steps.next-tag.outputs.v_minor}}
+        base: master
+        title: Release/${{steps.next-tag.outputs.v_minor}} into master
