--- a/.github/workflows/push-to-hotfix.yml
+++ b/.github/workflows/push-to-hotfix.yml
@@ -1,18 +1,18 @@
 # This workflow will create a PR:
 # - into develop and master for a hotfix push
 # - into develop for a release push (the PR to master for the release is created in cut-release.yml)
-name: Create release/hotfix PR into develop/master
+name: Create hotfix PR into develop and master
 on:
   push:
     branches:
-      - release/*
+      - hotfix/*
 jobs:   
   create-dev-pr:
     name: Create PR
     runs-on: ubuntu-latest
     steps:
       - # Create PR title based on the current ref, i.e:
-        # "refs/heads/release/v1.5.0" -> "Release/v1.5.0"
+        # "refs/heads/hotfix/KON-420" -> "Hotfix/KON-420"
         name: Generate PR title
         id: pr-title
         run: |
@@ -30,3 +30,11 @@ jobs:
           base: develop
           title: ${{steps.pr-title.outputs.value}} into develop
           draft: true
+
+      - name: Create pull request into master
+        uses: thomaseizinger/create-pull-request@1.2.1
+        with:
+          github_token: ${{github.token}}
+          head: ${{github.ref}}
+          base: master
+          title: ${{steps.pr-title.outputs.value}} into master
