--- a/.github/workflows/cut-release.yml
+++ b/.github/workflows/cut-release.yml
@@ -7,39 +7,48 @@ jobs:
     name: Create release branch
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code
-        uses: actions/checkout@v2
+    - name: Checkout master
+      uses: actions/checkout@v2
+      with:
+        ref: master
+        fetch-depth: 0
 
-      - name: Find previous tag
-        id: previous-tag
-        uses: WyriHaximus/github-action-get-previous-tag@v1
+    - name: Find previous tag
+      id: previous-tag
+      uses: WyriHaximus/github-action-get-previous-tag@v1
 
-      - name: Get next semver
-        id: next-tag
-        uses: WyriHaximus/github-action-next-semvers@v1
-        with:
-          version: ${{steps.previous-tag.outputs.tag}}
+    - name: Get next semver
+      id: next-tag
+      uses: WyriHaximus/github-action-next-semvers@v1
+      with:
+        version: ${{steps.previous-tag.outputs.tag}}
 
-      - name: Check out code
-        uses: actions/checkout@v2
-        with:
-          ref: develop
-
-      - name: Create release branch
-        run: git checkout -b release/${{steps.next-tag.outputs.v_minor}}
-
-      - name: Initialize mandatory git config
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email noreply@github.com
-
-      - name: Push new branch
-        run: git push origin release/${{steps.next-tag.outputs.v_minor}}
-
-    # - name: Check out release branch
+    # - name: Check out code
     #   uses: actions/checkout@v2
     #   with:
-    #     ref: release/${{steps.next-tag.outputs.v_minor}}
+    #     ref: develop
+
+    # - name: Create release branch
+    #   run: git checkout -b release/${{steps.next-tag.outputs.v_minor}}
+
+    # - name: Initialize mandatory git config
+    #   run: |
+    #    git config user.name "GitHub Actions"
+    #    git config user.email noreply@github.com
+
+    # - name: Push new branch
+    #   run: git push origin release/${{steps.next-tag.outputs.v_minor}}
+
+    - name: Reset master branch
+      run: |
+        git fetch origin develop:develop
+        git reset --hard develop
+
+    - name: Create pull request into master
+      uses: peter-evans/create-pull-request@v3
+      with:
+        branch: release/v${{steps.next-tag.outputs.v_minor}}
+        title: Release/v${{steps.next-tag.outputs.v_minor}} into master
 
     # - name: Create pull request into master
     #   uses: thomaseizinger/create-pull-request@1.2.1
